fix: edit z-index

--- a/blocks/hotspot/hotspot.css
+++ b/blocks/hotspot/hotspot.css
@@ -292,7 +292,7 @@
   top: var(--spacing-xs);
   right: var(--spacing-xs);
   padding: var(--spacing-s);
-  z-index: 1;
+  z-index: 2;
 }
 
 .hotspot .tooltip {
